DevOps/K8s/users-all-in-one-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
  labels:
    app: users-db
spec:
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: users-postgres
          image: postgres:16.2
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          # ports:
          #   - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: users-db
spec:
  selector:
    app: users-db
  ports:
    - port: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-backend
  labels:
    app: users-backend
spec:
  selector:
    matchLabels:
      app: users-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: users-backend
    spec:
      containers:
        - name: users-backend
          image: mvll/ms-users:0.2.2
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          # ports:
          #   - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-backend
spec:
  selector:
    app: users-backend
  #type: NodePort
  ports:
    - protocol: TCP
      targetPort: 8080  # pod port
      port: 8080        # service port
      #nodePort: 30000   # для типа NodePort. Для minikube нужно запустить 'minikube service users-backend'

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-backend
spec:
  rules:
  - host: users.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: users-backend
            port: 
              number: 8080
